# Transit_feasible_areas

./: README.md  pyproject.toml
transit_feasible_areas/: main.py  try.ipynb
transit_feasible_areas/backend/: all_stops.csv  get_all_stops.py  get_api.py  get_relevant_stops.py  inputs.py
transit_feasible_areas/backend/data/cached/: api_geoapify_com_v1_isoline_type=time_mode=bicycle_range=900_avoid=ferries%7chighways_traffic=approximated_lon=41_781729_lat=_87_60491761427323
transit_feasible_areas/templates/: item.html  landing.html  map.html  map_template.html  map_with_isochrone.html  map_with_stops.html
