[project]
name = "transit_feasible_areas"
version = "0.1.0"
description = "A FastAPI application to display feasible areas based on the selected transportation system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "polars>=1.18.0",
  "pandas>=2.2",
  "numpy>=1.26",
  "httpx>=0.27.2",
  "pytest>=8.3.4",
  "ruff>=0.8.4",
  "ipdb>=0.13.13",
  "ipython>=8.27.0",
  "textual>=1.0.0",
  "freezegun>=1.5.1",
  "googlemaps>=4.10.0"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"